--- a/client-side/src/components/PostAd/ProblemDescription.css
+++ b/client-side/src/components/PostAd/ProblemDescription.css
@@ -32,9 +32,10 @@
    
   }
 
-  .container{
+  .containerDes{
     display :flex;
     flex-direction: row;
+    justify-content: space-around;
  
   }
   .problemDescription{
@@ -43,36 +44,40 @@
     flex-direction: column;
   }
   .description{
-    width: 50%;
+    width: 80%;
     display :flex;
     flex-direction: column;
   }
   .description textarea{
     margin-top: 10px;
-    width: 80%;
+    width: 90%;
     height: 250px;
+    margin-bottom: 40px;
     border: solid 1px gray;
   }
   .description-container h3{
-    margin-left: 10px;
+    margin-top:20px;
+    margin-left: 20px;
     color: #2c385c;
   }
   .problemDescription img{
     margin-top: 10px;
-    width: 80%;
+    width: 90%;
+    margin-right: 40px;
     height: 230px;
   }
 
   .description-container p{
     margin-top: 10px;
-    margin-left: 10% ;
+    margin-left:5% ;
     width: 60%;
     letter-spacing: 1px;
     color:gray;
+    text-align: center;
 
   }
   .button-nav{
-   width: 80%;
+   width: 90%;
     display: flex;
     justify-content: flex-end;
     
@@ -114,7 +119,7 @@
     .post-description-progress1 span{
       font-size: 2rem;
     }
-    .container{
+    .containerDes{
       display :flex;
       flex-direction: column;
     }
