--- a/client-side/src/components/Header.css
+++ b/client-side/src/components/Header.css
@@ -1,6 +1,94 @@
-.header-container{
-    background-image: url('../images/A4L_Elements-01.png');
-    background-size: cover;
-    width: 100%;
-    height: 70px; 
-  }
+.nav-container{
+  background-color:#4b5779;
+  width: 100vw;
+  height: 80px;
+  display: flex;
+  justify-content:space-between;
+}
+
+.nav-div-image {
+  background-color: #2c385c;
+  width:200px;
+  height: 100%;
+  margin-left:50px;
+  padding-left: 1%;
+}
+
+.nav-div-image img{
+  width: 80%;
+  height:100%;
+}
+
+.nav-links{
+  width: 40%;
+  display:flex;
+  justify-content:left;
+  align-items: center;
+}
+
+.nav-link-id{
+  background:#f5c107;
+  border:2px solid white;
+  color:white;
+  border-radius: 2px;
+  cursor:pointer;
+  font-size: 1.1rem;
+  font-weight: bold;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-left: 15px;
+  text-decoration: none;
+}
+.home-icon{
+  margin-left: 15px;
+}
+.home-username{
+  font-size: 1.1rem;
+  font-weight: bold;
+  color:white;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border:2px solid white;
+  background-color: #2c385c ;
+}
+
+@media screen and (max-width: 1030px) {
+
+.nav-links{
+  width: 60%;}
+}
+
+@media screen and (max-width:700px) {
+.nav-div-image {
+  width:90px;
+  margin-left:10px;
+}
+.nav-links{
+  width: 70%;
+}
+
+.nav-div-image img{
+  width: 60%;
+}
+
+.nav-link-id{
+  font-size: 0.7rem;
+
+  padding-left: 5px;
+  padding-right: 5px;
+
+  margin-left: 5px;
+}
+.home-icon{
+  margin-left: 5px;
+}
+.home-username{
+  font-size:0.7rem;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+}
