--- a/client-side/src/components/ProposalAd/ProposalAd.css
+++ b/client-side/src/components/ProposalAd/ProposalAd.css
@@ -11,6 +11,10 @@
     width: 20%;
     margin-right: 20px;
 }
+.proposalslist{
+    height: 600px;
+    overflow-y:scroll;
+}
 .proposalad-list{
     margin-top: 60px;
     width: 60%;
